.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:02:40 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
12:03:30 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
12:22:22 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
12:23:30 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
..\src\Prueba.c:73:7: error: conflicting types for 'resta'
   73 | float resta(int num1,int num2, float* rResultado)
      |       ^~~~~
..\src\Prueba.c:16:5: note: previous declaration of 'resta' was here
   16 | int resta(int num1,int num2, float* rResultado);
      |     ^~~~~
12:23:46 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
12:24:56 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
12:26:32 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
12:30:04 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
12:30:50 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
12:32:10 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
13:00:58 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
13:02:56 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
13:05:35 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
..\src\Prueba.c: In function 'main':
..\src\Prueba.c:38:64: warning: comparison between pointer and integer
   38 |     }while(operacion != 's' && operacion != 'r' && multiplicar != 'm' && operacion != 'd');
      |                                                                ^~
..\src\Prueba.c:48:5: error: duplicate case value
   48 |     case 'r':
      |     ^~~~
..\src\Prueba.c:45:5: note: previously used here
   45 |     case 'r':
      |     ^~~~
13:05:46 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
..\src\Prueba.c: In function 'main':
..\src\Prueba.c:38:64: warning: comparison between pointer and integer
   38 |     }while(operacion != 's' && operacion != 'r' && multiplicar != 'm' && operacion != 'd');
      |                                                                ^~
gcc -o Prueba.exe "src\\Prueba.o" 
13:06:13 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
13:08:57 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
13:12:36 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
..\src\Prueba.c: In function 'main':
..\src\Prueba.c:64:12: error: 'pause' undeclared (first use in this function)
   64 |     system(pause);
      |            ^~~~~
..\src\Prueba.c:64:12: note: each undeclared identifier is reported only once for each function it appears in
13:13:19 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
13:18:01 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
13:19:08 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
..\src\Prueba.c: In function 'main':
..\src\Prueba.c:60:4: error: 'num2' undeclared (first use in this function)
   60 | if(num2!=0)
      |    ^~~~
..\src\Prueba.c:60:4: note: each undeclared identifier is reported only once for each function it appears in
13:19:46 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
13:20:27 **** Incremental Build of configuration Debug for project Prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Prueba.o" "..\\src\\Prueba.c" 
gcc -o Prueba.exe "src\\Prueba.o" 
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
Info: Nothing to build for Prueba
